# CS-5001-AI-Augmented-SE

Week_2/rag_in_class/dataset/outputs/explanations/: pytest_error_log.txt  task_101_model_output.md  task_107_model_output.md  task_123_model_output.md  task_124_model_output.md  task_144_model_output.md  task_153_model_output.md  task_155_model_output.md  task_161_model_output.md  task_1_model_output.md  task_238_model_output.md  task_252_model_output.md  task_315_model_output.md  task_33_model_output.md  task_353_model_output.md  task_367_model_output.md  task_392_model_output.md  task_395_model_output.md  task_397_model_output.md  task_426_model_output.md  task_431_model_output.md  task_453_model_output.md  task_461_model_output.md  task_488_model_output.md  task_489_model_output.md  task_494_model_output.md  task_525_model_output.md  task_52_model_output.md  task_558_model_output.md  task_641_model_output.md  task_681_model_output.md  task_688_model_output.md  task_690_model_output.md  task_728_model_output.md  task_783_model_output.md  task_834_model_output.md  task_853_model_output.md  task_882_model_output.md  task_901_model_output.md  task_927_model_output.md  (+1 more)
Week_2/rag_in_class/dataset/outputs/tasks/: task_107.py  task_144.py  task_153.py  task_315.py  task_33.py  task_367.py  task_426.py  task_431.py  task_489.py  task_494.py  task_52.py  task_688.py  (+4 more)
Week_2/rag_in_class/prompts/: user_prompt.md
Week_3/in-class-activity/simplified_agent/: README.md  pyproject.toml
Week_3/in-class-activity/simplified_agent/src/classroom_cli_agent/: prompt_manager.py
(+9 files in other folders)
